Popplio and Rayquaza August updates.html
Raid hours still to be added once images received. Artist with no social media link mentioned as discord users and link to PoGoCommunity Discord added as interim.

--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,177 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Popplio Community Day -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Aug2024CommunityDay" href="#Aug2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Popplio</span></h5>
+                        <p>
+                        Popplio will be making a splash during the August Community Day on the 31st of August!
+                        </p>
+                        <div class="assetGroup">
+                           <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/12aUyfYktOq2ZttLNSv6WokyUGU1M3urZ?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplio_lumity2.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/1iNOv9qYqjpGDPMjVn4eZMgbE5AhCJotG/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplio_lumity1.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioCristina.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioCristina.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Cristina's Badge Design</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Designed by <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a> for her own community, and shared with us!
+                                 </div>
+                              </p> 
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky2.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky2.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>LakeshorePOGO's Popplio Button 1</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://x.com/LakeshorePOGO" target="_blank">LakeshorePOGO</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky1.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky1.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>LakeshorePOGO's Popplio Button 2</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://x.com/LakeshorePOGO" target="_blank">LakeshorePOGO</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/CommunityDayPopplio.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/CommunityDayPopplio.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Popplio Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Community Day League
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/Popplio.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/Popplio.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Popplio Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioGold.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioGold.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Popplio Gold Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                            <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioQuasigoyo1.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioQuasigoyo1.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Popplio Round Badge design by @Quasigoyo</label>
+                              </a>
+                              <p>
+                                 Published by Discord user @Quasigoyo.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/XbXeJ7Gr" target="_blank">Credit link to be added shortly</a>
+                                 </div>
+                              </p>
+                           </div>
+                          <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioQuasigoyo2.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/PopplioQuasigoyo2.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Popplio Hex Badge design by @Quasigoyo</label>
+                              </a>
+                              <p>
+                                 Published by Discord user @Quasigoyo.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/XbXeJ7Gr" target="_blank">Credit link to be added shortly</a>
+                                 </div>
+                              </p>
+                           </div>
+                               <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky3.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-31-community-day/popplioansky3.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Popplio Hex Badge design by @imraichuwrong</label>
+                              </a>
+                              <p>
+                                 Published by Discord user @imraichuwrong.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/XbXeJ7Gr" target="_blank">Credit link to be added shortly</a>
+                                 </div>
+                              </p>
+                           </div> 
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Popplio Community Day -->
                      <!-- Start Tynamo Community Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Jul2024CommunityDay" href="#Jul2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Tynamo</span></h5>
@@ -105,7 +276,7 @@
                         <div class="assetGroup">
                               <div class="asset">
                               <a href="https://drive.google.com/drive/folders/12QUlMuwVKnN9dLub6ljqcaXMoXhBVKp9?usp=sharing" target="_blank">
-                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-07-21-community-day/badge.png">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/badge.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -120,7 +291,7 @@
                            </div>
                            <div class="asset">
                               <a href="https://drive.google.com/file/d/1AbMCDnYMzqnjyLQQH00AyywnUSHrDbod/view?usp=drive_link" target="_blank">
-                              <img  alt="" src=".assets/2024/Season13-TimelessTravels/2024-07-21-community-day/background.png">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-07-21-community-day/background.png">
                               <div class="asset-label">
                                  <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
                               </div>
@@ -459,9 +630,9 @@
                      <!-- End July Raid Hours -->
                      <!-- Start Mega Rayquaza Elite Raids -->
                      <div class="asset-section" data-type="raid-event" data-year="2024">
-                        <h5><a class="page-anchor" id="mega-rayquaza-elite-raids" href="#mega-rayquaza-elite-raids">Elite Raids:</a> <span style="font-family:'texgyreadventorregular';">Mega Rayquaza</span></h5>
+                        <h5><a class="page-anchor" id="mega-rayquaza-elite-raids" href="#mega-rayquaza-elite-raids">Elite & Mega Raids:</a> <span style="font-family:'texgyreadventorregular';">Mega Rayquaza</span></h5>
                         <p>
-                           Mega Rayquaza will feature in Elite Raids on the 29th of June at 12:00pm, 01:00pm, 05:00pm and 06:00pm. Check out <a href="https://leekduck.com/events/elite-raid-mega-rayquaza-june/">LeekDuck</a> for details.
+                           Mega Rayquaza will feature in Elite Raids on the 29th of June at 12:00pm, 01:00pm, 05:00pm and 06:00pm as well as a make-up event on the 3rd of August at 11:00am, 01:00pm and 06:00pm. Check out <a href="https://leekduck.com/events/elite-raid-mega-rayquaza-june/">LeekDuck</a> for details.
                         </p>
                         <div class="assetGroup">
                            <div class="asset">
@@ -491,6 +662,51 @@
                                  Fun activity sheet to complete during the Mega Rayquaza Raid Day
                                  <div class="credits">
                                     Sheet Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/MegaRayOne.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/MegaRayOne.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Mega Rayquaza Raid Day Banner 1</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Days.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/MegaRayTwo.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/MegaRayTwo.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Mega Rayquaza Raid Day Banner 2</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Days.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/Rayquaza_EK1981.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-03-raid-day/Rayquaza_EK1981.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>Mega Rayquaza Raid Day Banner by @Ek1981</label>
+                              </a>
+                              <p>
+                                 Published by Discord user @Ek1981.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/XbXeJ7Gr" target="_blank">Credit link to be added shortly</a>
                                  </div>
                               </p>
                            </div>
