--- a/thin.html
+++ b/thin.html
@@ -267,6 +267,107 @@
                         <hr style="margin:25px;border-color: #555;">
                      </div>
                      <!-- End Popplio Community Day -->
+                     <!-- Start Aug Raid Hours -->
+                     <div class="asset-section" data-type="raid-event" data-year="2024">
+                        <h5><a class="page-anchor" id="Aug2024RaidHours" href="#Aug2024RaidHours">Raid Hour:</a> <span style="font-family:'texgyreadventorregular';">August Raid Hours </span></h5>
+                        <p>
+                           A Raid Hour featuring Legendary Pokémon/Mythical Pokémon/Ultra Beast is scheduled from 6 to 7 pm Local Time every week. During this hour there will be an increased number of featured Raids. Check out <a href="https://leekduck.com/events">LeekDuck</a> for details.
+                        </p>
+                        <div class="assetGroup">
+                             <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresClock.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresClock.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Moltres Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 7th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresIncrement.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresIncrement.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Moltres Clock Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 7th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThunderusClock.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThunderusClock.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Thunderus Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 14th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThunderusIncrement.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThunderusIncrement.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Thunderus Clock Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 14th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasClock.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasClock.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Xerneas Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 21st and 28th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                            <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasIncrement.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasIncrement.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Xerneas Clock Raid Hour Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 21st and 28th of August 2024.
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Aug Raid Hours -->
                      <!-- Start Tynamo Community Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Jul2024CommunityDay" href="#Jul2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Tynamo</span></h5>
