--- a/thin.html
+++ b/thin.html
@@ -96,6 +96,90 @@
                    </div>
                   <hr style="margin:25px;border-color: #555;">
                   <div class="text-left">
+                     <!-- Start Beldum Community Day Classic -->
+                     <div class="asset-section" data-type="community-day" data-year="2024">
+                        <h5><a class="page-anchor" id="Aug2024CommunityDayClassic" href="#Aug2024CommunityDayClassic">Community Day Classic:</a> <span style="font-family:'texgyreadventorregular';">Beldum</span></h5>
+                        <p>
+                        Beldum makes it’s much awaited return during the Community Day Classic on the 18th of August 2024! !  
+                        </p>
+                        <div class="assetGroup">
+                              <div class="asset">
+                              <a href="https://drive.google.com/drive/folders/12dSG9BspRo2qpuXmZghp75VBu4_a25l2?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/BeldumHex.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Beldum Hexagon Badge</label>
+                              </a>
+                              <p>
+                                 Designed to seamlessly fill the void left by the Former Silph Road's asset team.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="https://drive.google.com/file/d/15ALhJLT1u1EwEe9OILRgGjpJF6aehg2_/view?usp=drive_link" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/HexBackground.png">
+                              <div class="asset-label">
+                                 <img src="./img/gdrive-folder-icon.png" alt="Google Drive Folder Label">
+                              </div>
+                              <label>Beldum Hexagon Badge with Background</label>
+                              </a>
+                              <p>
+                                 Great for use to make buttons or stickers, plenty of extra background to crop to desired size.
+                                 <div class="credits">
+                                    Badge Design: <a href="https://www.instagram.com/lux.imity_xx/">xLuximityx</a>
+                                 </div>
+                              </p>
+                           </div> 
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/CommunityDayClassicBeldum.jpg" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/CommunityDayClassicBeldum.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Beldum Banner</label>
+                              </a>
+                              <p>
+                                 Published by the CDL Team for you to promote your communiy's participation in the Community Day League
+                                 <div class="credits">
+                                    <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/RewindBeldum.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/RewindBeldum.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Beldum Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                           <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/RewindBeldumGold.png" target="_blank">
+                              <img  alt="" src="./assets/2024/Season13-TimelessTravels/2024-08-18-community-day-classic/RewindBeldumGold.png">
+                              <div class="asset-label">
+                                 <img src="./img/png.png" alt="PNG File Label">
+                              </div>
+                              <label>CDL Beldum Gold Badge</label>
+                              </a>
+                              <p>
+                                 <div class="credits">
+                                    Badge Design: <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                        </div>
+                        <hr style="margin:25px;border-color: #555;">
+                     </div>
+                     <!-- End Beldum Community Day Classic -->
                      <!-- Start Popplio Community Day -->
                      <div class="asset-section" data-type="community-day" data-year="2024">
                         <h5><a class="page-anchor" id="Aug2024CommunityDay" href="#Aug2024CommunityDay">Community Day:</a> <span style="font-family:'texgyreadventorregular';">Popplio</span></h5>
@@ -361,6 +445,51 @@
                                  Published by the CDL Team for you to promote your communiy's participation in the Raid Hour on the 21st and 28th of August 2024.
                                  <div class="credits">
                                     <a href="https://discord.gg/dGPHjdKGZm" target="_blank">Community Day League team</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresChrsitina.png" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/MoltresChrsitina.png">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Moltres Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 7th of August 2024.
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThundurusChristina.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/ThundurusChristina.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Incarnate Thundurus Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 14th of August 2024.
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
+                                 </div>
+                              </p>
+                           </div>
+                              <div class="asset">
+                              <a href="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasChristinacorrect.jpg" target="_blank">
+                              <img  alt="alt" src="./assets/2024/Season13-TimelessTravels/2024-08-raid-hours/XerneasChristinacorrect.jpg">
+                              <div class="asset-label">
+                                 <img src="./img/jpg.png" alt="JPG File Label">
+                              </div>
+                              <label>Christina's Xerneas Raid Hour Icon</label>
+                              </a>
+                              <p>
+                                 Square design perfect for your Campfire Events for the raid hour taking place on the 21st and 28th of August 2024.
+                                 <div class="credits">
+                                    Icon Design: <a href="https://www.instagram.com/Christina_Joss/">Christina_Joss</a>
                                  </div>
                               </p>
                            </div>
